backup_20260507_114725/Backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: val-backend
  labels:
    app: val-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: val-backend
  template:
    metadata:
      labels:
        app: val-backend
    spec:
      containers:
        - name: val-backend
          image: 219865458704.dkr.ecr.ap-south-1.amazonaws.com/devops-testing:val-v1-39
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          # ✅ Health Checks
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3

          # ✅ Resource Management (VERY IMPORTANT)
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          # ✅ Basic Env (expand later)
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File

      restartPolicy: Always
