backup_20260507_114725/Backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: val
  name: val-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - val.dev.ap-south-1.metaecho.com
    secretName: val-tls
  rules:
  - host: val.dev.ap-south-1.metaecho.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: val-backend-svc
            port:
              number: 3000
